...
      return;
    }
    setPage(page + 1);
    fetchTopicInterests();
  };
  return (
    <View style={styles.container} testID='topicInterestScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={topicInterestList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
